Version 1.1.2 (?? ??? 2006)
 - Fixed bug [ 1565004 ] unapproved events
 - Fixed bug [ 1564901 ] '__public__' at the 'conflict-view' not translated
 - Fixed bug [ 1563734 ] 8 days in view L (week)
 - Fixed bug 1563740: Background color for current day not shown at weekends
 - Added 'System Log' in menu.  Added logging for adding/editing/deleting
   users and invalid logins.
 - Fixed bug 1559590: Colors wrong
 - Fixed bug 1559486: duplicate code redundancies - view_entry.php
 - Fixed bug 1561612: DISPLAY_CREATED_BYPROXY doesn't work when using LDAP
 - Implemented RFE 1560698: redirected back to the unapproved list after edit
 - Fixed bug 1560705: repeated days displayed only in English not in the desired
 - Fixed bug 1519987: incomplete 'matrix' using week.php for Seamonkey & Firefox
 - Fixed bug 1559816: QUERY_STRING
 - Fixed bug 1560666: Current User is showing in pull down menu of
 - Fixed bug 1560712: date-selection popup-menu not properly adjusted
 - Fixed bug 1496930: 'userlist' will not be sorted as at your site
 - Fixed bug 1559567: v1.1.1 Fresh install Fails due to no database
 - Fixed bug 1556705: Missing mailto links on view_entry.php
Version 1.1.1 (15 Sep 2006)
 - Fixed bug 1431329: user_search_dn() uses call by ref and too many admins
 - Fixed bug 1523439: Bug with admins in LDAP
 - Fixed bug 1523442: Bug (Warning) with pass-by-reference
 - Fixed some issues with installation script dealing with blank databases
 - Created commom error function to hopefully cleanup the code
 - Fixed bug 1554383: Times next to events during import is wrong
 - Fixed bug 1555860: SQL Error on import
 - Changed translate.php to ignore /install/ files if unneeded
 - Implemented PATCH 1539603: Move </body></html> into print_trailer()
 - Fixed bug 1554309: demo calendar event days are not the same
 - Fixed bug 1553518: events one day early in list_unapproved.php
 - Fixed bug 1553639: Events missing from the 31st day of month