@@ -1,4 +1,6 @@
 Version 1.1.2 (?? ??? 2006)
+ - Fixed bug [ 1561290 ] flags of 'Allow Access to Other Users' Calendar'
+ - Fixed bug [ 1565606 ] Changing in UAC not worked
  - Fixed bug [ 1565004 ] unapproved events
  - Fixed bug [ 1564901 ] '__public__' at the 'conflict-view' not translated
  - Fixed bug [ 1563734 ] 8 days in view L (week)
